--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@faustwp/blocks": "^3.0.0",
     "@faustwp/cli": "^3.0.0",
     "@faustwp/core": "^3.0.0",
+    "@heroicons/react": "^2.2.0",
     "@tailwindcss/typography": "^0.5.19",
     "graphql": "^16.8.1",
     "next": "^14.1.0",
